changes in contact

--- a/alltables.html
+++ b/alltables.html
@@ -67,7 +67,7 @@
             <!--  header  -->
             <header class="header_half">
                 <div class="header-inner">
-                    <div class="header-top_contacts"><a href="#"><span>Call now:</span> +918888899885</a></div>
+                    <div class="header-top_contacts"><a href="#"><span>Call now:</span> +918888899885</a><a href="#"><span>Write :</span> nicehomeinfra@gmail.com</a></div>
                     <div class="share-btn show-share isShare"></div>
                     <a href="create-dish.html"><div class="header_half-reser_btn " id="create_new_dish"><span style="color: black;">Introduce New Dish</span></div></a>
                     <div class="nav-button_wrap isvis_hid_menu">
@@ -410,7 +410,7 @@
                         <!-- subbfooter -->
                         <div class="subbfooter">
                             <div class="policy-box">
-                                <span> &#169; Wanteat Restaurant 2024 </span>  /  All rights reserved.  
+                                <span> &#169; NiceHome builders and Developers </span>  /  All rights reserved.  
                             </div>
                             <div class="pay_list">
                                 <ul>
