--- a/contacts.html
+++ b/contacts.html
@@ -29,8 +29,8 @@
                 <div class="header-inner">
                     <div class="header-top_contacts"><a href="#"><span>Call now:</span> +918888899885</a><a href="#"><span>Write :</span> nicehomeinfra@gmail.com</a></div>
                     <div class="share-btn show-share isShare"><span>Share</span>  <i class="fa-thin fa-chevron-down"></i></div>
-                    <div class="header_half-reser_btn show-rb"><span>Book Table</span><i class="fa-thin fa-bookmark"></i></div>
-                    <div class="cart-btn sc_btn"><strong> Your Cart</strong><i class="fa-thin fa-basket-shopping-simple"></i><span class="cart-btn_counter">3</span></div>
+                    <div class="header_half-reser_btn show-rb"><span>Book home</span><i class="fa-thin fa-bookmark"></i></div>
+                    <!-- <div class="cart-btn sc_btn"><strong> Your Cart</strong><i class="fa-thin fa-basket-shopping-simple"></i><span class="cart-btn_counter">3</span></div> -->
                     <div class="nav-button_wrap isvis_hid_menu">
                         <div class="nav-button"><span></span></div>
                     </div>
@@ -42,7 +42,7 @@
                     </div>
                     <!-- share-wrapper end -->					
                     <!-- header-cart_wrap  -->
-                    <div class="header-cart_wrap novis_cart">
+                    <!-- <div class="header-cart_wrap novis_cart">
                         <div class="close-cart radius_btn close_cart-init"><i class="fa-solid fa-xmark"></i></div>
                         <div class="header-cart_title">Your Cart <span>3 items</span></div>
                         <div class="header-cart_wrap_container fl-wrap">
@@ -85,7 +85,7 @@
                             <a href="checkout.html">  Checkout</a>
                         </div>
                     </div>
-                    <!-- header-cart_wrap end  -->					
+                    header-cart_wrap end 					 -->
                 </div>
             </header>
             <!--  header end  -->
@@ -105,10 +105,10 @@
                                     <li>
                                         <a href="index.html">Home </a>
                                     </li>
-                                    <li><a href="about.html">About Us</a></li>
+                                    <li><a href="alltables.html">All projects</a></li>
                                     <!-- <li><a href="menu.html">  Menu</a></li> -->
                                     <li><a href="contacts.html" class="act-link">Contacts</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
+                                    <!-- <li><a href="blog.html">Blog</a></li> -->
                                 </ul>
                             </nav>
                             <!-- nav end-->
@@ -136,9 +136,17 @@
                     <div class="overlay"></div>
                 </div>
                 <div class="column-image-title">
-                    <h2>Address-</h2>
-                    <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit 
-                        esse quam nihil molestiae consequatur.</p>
+                    <h2>Address:</h2>
+                    <p>                <br>
+                        <strong style="color: #e28743;">Nashik Office:</strong> 
+                        <br>
+                        2, Mahurgadh Society, Developed by Nice Home,<br>
+                        Dattamandir Road, Nashik Road, Nashik (M.S.) 422001
+                        <br><br>
+                        <strong style="color: #e28743;">Mumbai Office:</strong> 
+                        <br>
+                        18, Jagganath Commerce Plaza,<br>
+                        Char Rasta, Dombivali (E), Mumbai (M.S.) 421201</p>
                 </div>
             </div>
             <!--column-image end-->			
@@ -155,7 +163,7 @@
                                         <h2>Contact Details</h2>
                                     </div>
                                     <div class="text-block ">
-                                        <p>Lorem Ipsum generators on the Internet king this the first true generator laudantium totam aperiam. Curabitur convallis eget leo  .</p>
+                                        <p>Looking to Build or Buy Your Dream Home? Get in touch with us for bookings or inquiries at</p>
                                         <div class="contactform-wrap">
                                             <div class="reserv-modal_bg"></div>
                                             <div id="message"></div>
@@ -163,21 +171,21 @@
                                                 <fieldset>
                                                     <div class="row">
                                                         <div class="col-sm-6">
-                                                            <input type="text" name="name" id="name2" placeholder="Your Name *" value="">
+                                                            <input type="text" name="name" id="name2" placeholder="Your Name *" value="NiceHome builders and Developers">
                                                         </div>
                                                         <div class="col-sm-6">
-                                                            <input type="text"  name="email" id="email2" placeholder="Email Address *" value="">
+                                                            <input type="text"  name="email" id="email2" placeholder="Email Address *" value="nicehomeinfra@gmail.com">
                                                         </div>
                                                         <div class="col-sm-6">
-                                                            <input type="text"  name="phone" id="phone2" placeholder="Phone *" value="">
+                                                            <input type="text"  name="phone" id="phone2" placeholder="Phone *" value="+918888899885">
                                                         </div>
                                                         <div class="col-sm-6">
                                                             <div class=" fl-wrap">
                                                                 <select name="persons" id="subject2" class="chosen-select no-search-select">
                                                                     <option data-display="Subject">Any</option>
-                                                                    <option value="Upcoming Events">Upcoming Events </option>
-                                                                    <option value="Book table">Book table</option>
-                                                                    <option value="Banquet">Banquet</option>
+                                                                    <option value="Upcoming Events">Upcoming projects </option>
+                                                                    <option value="Book table">Book home enquiry</option>
+                                                                    <!-- <option value="Banquet">Banquet</option> -->
                                                                     <option value="Banquet">Other</option>
                                                                 </select>
                                                             </div>
@@ -196,20 +204,20 @@
                                     <div class="single-open-hours">
                                         <div class="single-open-hours_container">
                                             <div class="single-open-hours-title">
-                                                <h4>Call For Reservations</h4>
+                                                <h4>Call For an appointment</h4>
                                                 <h2>Opening Hours</h2>
                                             </div>
                                             <div class="work-time fl-wrap">
                                                 <div class="row">
                                                     <div class="col-md-6">
-                                                        <h6>Sunday to Tuesday</h6>
+                                                        <h6>monday to Saturday</h6>
                                                         <div class="hours">
                                                             09:00<br>
                                                             22:00
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
-                                                        <h6>Friday to Saturday</h6>
+                                                        <h6>Sunday</h6>
                                                         <div class="hours">
                                                             11:00<br>
                                                             19:00
@@ -217,9 +225,9 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="big-number fl-wrap"><a href="tel:+3111123456789">+3(111)123456789</a></div>
+                                            <div class="big-number fl-wrap"><a href="tel:+918888899885">+918888899885</a></div>
                                         </div>
-                                        <div class="bg"  data-bg="images/all/6.jpg"></div>
+                                        <div class="bg"  data-bg="images/bg/4.jpg"></div>
                                     </div>
                                 </div>
                             </div>
@@ -235,9 +243,9 @@
                         <div class="map-links_tabs-container">
                             <div class="map-links_tabs-title">Select City <i class="fa-thin fa-chevron-down"></i></div>
                             <div class="map-links_tabs">
-                                <a class="map-link ml_act first_init_marker" href="#" data-markermail="yourmail@domain.com"  data-markerphone="+3(123)987654" data-markeradress="USA 27TH Brooklyn NY" data-markertitle="NewYork Wanteat" data-linklat="40.7427837" data-linklong="-73.11445617"> NewYork Wanteat</a>
-                                <a class="map-link" href="#" data-markermail="poormail@domain.com"  data-markerphone="+4(123)555444" data-markeradress="USA 11TH Washington DC" data-markertitle=" Washington Wanteat" data-linklat="38.90706436" data-linklong="-77.05604553">  Washington Wanteat</a>
-                                <a class="map-link" href="#" data-markermail="cleanma@domain.com"  data-markerphone="+5(123)578945" data-markeradress="USA 15TH Boston NY" data-markertitle="Boston Wanteat" data-linklat="42.33862563" data-linklong="-71.03090286"> Boston Wanteat</a>
+                                <a class="map-link ml_act first_init_marker" href="#" data-markermail="nicehomeinfra@gmail.com"  data-markerphone="+918888899885" data-markeradress="college Road, nashik" data-markertitle="Nashik site" data-linklat="40.7427837" data-linklong="-73.11445617"> Nashik site</a>
+                                <a class="map-link" href="#" data-markermail="nicehomeinfra@gmail.com"  data-markerphone="+918888899885" data-markeradress="upcoming" data-markertitle=" Mumbai site" data-linklat="38.90706436" data-linklong="-77.05604553">  Mumbai site</a>
+                                <!-- <a class="map-link" href="#" data-markermail="cleanma@domain.com"  data-markerphone="+5(123)578945" data-markeradress="USA 15TH Boston NY" data-markertitle="Boston Wanteat" data-linklat="42.33862563" data-linklong="-71.03090286"> Boston Wanteat</a> -->
                             </div>
                         </div>
                         <div class="location-container">
@@ -259,7 +267,7 @@
                 <div class="order-wrap">
                     <div class="container small-container">
                         <h4>Ready To Visit Our company</h4>
-                        <a href="#" class="btn radius_btn show-rb">Book Table Now<i class="fa-regular fa-chevrons-right"></i></a>
+                        <a href="#" class="btn radius_btn show-rb">Book home Now<i class="fa-regular fa-chevrons-right"></i></a>
                     </div>
                 </div>
             </div>
