--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!--  header  -->
         <header class="header_half">
             <div class="header-inner">
-                <div class="header-top_contacts"><a href="#"><span>Call now:</span> +918888899885</a><a
+                <div class="header-top_contacts"><a href="#"><span>Call now:</span> +918888899885</a><a href="#"><span>Write :</span> nicehomeinfra@gmail.com</a><a
                        
                 <div class="share-btn show-share isShare"></div>
                 <!-- <a href="alltables.html">
@@ -264,14 +264,14 @@
                                       <br>  <b>Infrastructure Development:</b> Roads, bridges, and public infrastructure projects.</br>
                                       <br> <b>Project Management:</b> Comprehensive project planning, budgeting, and execution.</br></p>
                                     <div class="dec-list">
-                                        <ul>
+                                        <!-- <ul>
                                             <li><i class="fa-thin fa-plate-utensils"></i>Leverage agile frameworks to
                                                 provide a robust synopsis.</li>
                                             <li><i class="fa-thin fa-pan-food"></i>Iterative approaches to corporate
                                                 strategy foster.</li>
                                             <li><i class="fa-thin fa-bowl-chopsticks-noodles"></i>Scalable gun control
                                                 breakthroughs social movement.</li>
-                                        </ul>
+                                        </ul> -->
                                     </div>
                                     <!-- <a href="about.html" class="btn radius_btn  fl-btn">Read More About Us<i class="fa-regular fa-chevrons-right"></i></a> -->
                                 </div>
@@ -326,12 +326,11 @@
                             <div class="services-list-item">
                                 <span class="serv-icon"><i class="fa-thin fa-salad"></i></span>
                                 <span class="services_number">01.</span>
-                                <h3>Daily New Fresh Menus</h3>
-                                <p>Sed elit quam, iaculis sed semper sit amet, sollicitudin vitae nibh. Quisque at magna
-                                    eu augue semper euismod. Fusce commodo molestie luctus. </p>
+                                <h3>Expert Craftsmanship</h3>
+                                <p>Our team is composed of highly skilled architects, engineers, and builders who are dedicated to delivering top-quality work on every project, big or small. From initial design to final touches, our craftsmanship ensures excellence at each step. </p>
                                 <ul>
-                                    <li>Sed elit quam.</li>
-                                    <li>Eget interdum massa</li>
+                                    <!-- <li>Sed elit quam.</li> -->
+                                    <!-- <li>Eget interdum massa</li> -->
                                 </ul>
                             </div>
                         </div>
@@ -341,18 +340,28 @@
                             <div class="services-list-item">
                                 <span class="serv-icon"><i class="fa-thin fa-olive-branch"></i></span>
                                 <span class="services_number">02.</span>
-                                <h3>Fresh Ingredient, Tasty Meals</h3>
-                                <p>Sed elit quam, iaculis sed semper sit amet, sollicitudin vitae nibh. Quisque at magna
-                                    eu augue semper euismod. Fusce commodo molestie luctus. </p>
+                                <h3>Innovative Design Solutions</h3>
+                                <p>We pride ourselves on our ability to bring fresh, innovative ideas to construction. By blending modern trends with timeless techniques, we create spaces that are not only functional but also visually inspiring and future-ready. </p>
                                 <ul>
-                                    <li>Sed elit quam.</li>
-                                    <li>Eget interdum massa</li>
+                                    <!-- <li>Sed elit quam.</li>
+                                    <li>Eget interdum massa</li> -->
                                 </ul>
                             </div>
                         </div>
                         <!--services-list-item end-->
                         <!--services-list-item-->
-                       
+                        <div class="col-md-4">
+                            <div class="services-list-item">
+                                <span class="serv-icon"><i class="fa-thin fa-olive-branch"></i></span>
+                                <span class="services_number">03.</span>
+                                <h3>3. Commitment to Sustainability</h3>
+                                <p>We believe in building responsibly. Our approach emphasizes sustainable materials and eco-friendly practices, ensuring that our constructions contribute positively to the environment and are energy-efficient. </p>
+                                <ul>
+                                    <!-- <li>Sed elit quam.</li>
+                                    <li>Eget interdum massa</li> -->
+                                </ul>
+                            </div>
+                        </div>
                         <!--services-list-item end-->
                     </div>
                 </div>
@@ -478,7 +487,7 @@
                     <!-- subbfooter -->
                     <div class="subbfooter">
                         <div class="policy-box">
-                            <span> &#169; Wanteat Restaurant 2024 </span> / All rights reserved.
+                            <span> &#169; NiceHome builders and Developers </span> / All rights reserved.
                         </div>
                         <div class="pay_list">
                             <ul>
