add new projects

--- a/about.html
+++ b/about.html
@@ -562,7 +562,7 @@
                                             <div class="footer-contacts footer-box">
                                                 <ul>
                                                     <li><span>Call :</span><a href="#">+918888899885</a></li>
-                                                    <li><span>Write  :</span><a href="#">nicehomeinfra@gmail.com</a></li>
+                                                    <li><span>Email  :</span><a href="#">nicehomeinfra@gmail.com</a></li>
                                                     <li><span>Find us : </span><a href="#"><B>Nashik office:</B> 2,Mahurgadh Society Developed by Nice Home,
                                                          Dattamandir Road,Nashik Road,Nashik(M.S.)422001.</a>  , <a href="#"> <B>Mumbai Office: </B> 18,jagganath
                                                              Commerce Plaza, Char Rasta, Dombivali(E)(M.S) 421201</a></li>
