--- a/blog-single.html
+++ b/blog-single.html
@@ -419,7 +419,7 @@
                                             <div class="footer-contacts footer-box">
                                                 <ul>
                                                     <li><span>Call :</span><a href="#">+918888899885</a> , <a href="#">+56897456123</a></li>
-                                                    <li><span>Write  :</span><a href="#">nicehomeinfra@gmail.com</a></li>
+                                                    <li><span>Email  :</span><a href="#">nicehomeinfra@gmail.com</a></li>
                                                     <li><span>Find us : </span><a href="#">USA 27TH Brooklyn NY</a></li>
                                                 </ul>
                                             </div>
