--- a/cart.html
+++ b/cart.html
@@ -31,7 +31,7 @@
         <header class="header_half">
             <div class="header-inner">
                 <div class="header-top_contacts"><a href="#"><span>Call now:</span> +918888899885</a><a
-                        href="#"><span>Write :</span> nicehomeinfra@gmail.com</a></div>
+                        href="#"><span> :</span> nicehomeinfra@gmail.com</a></div>
                 <div class="share-btn show-share isShare"></div>
                 <a>
                     <div class="cart-btn sc_btn" onclick="openOrder()"><strong>Your Order</strong><i
@@ -182,7 +182,7 @@
                                             <ul>
                                                 <li><span>Call :</span><a href="#">+918888899885</a> , <a
                                                         href="#"></a></li>
-                                                <li><span>Write :</span><a href="#">nicehomeinfra@gmail.com</a></li>
+                                                <li><span>Email :</span><a href="#">nicehomeinfra@gmail.com</a></li>
                                                 <li><span>Find us : </span><a href="#"> 27TH Brooklyn NY</a></li>
                                             </ul>
                                         </div>
