--- a/contacts.html
+++ b/contacts.html
@@ -340,7 +340,7 @@
                                                         <a href="tel:+918888899885">+918888899885</a>
                                                     </li>
                                                     <li>
-                                                        <span>Write :</span>
+                                                        <span>Email :</span>
                                                         <a href="mailto:nicehomeinfra@gmail.com">nicehomeinfra@gmail.com</a>
                                                     </li>
                                                     <li>
