--- a/createTable.html
+++ b/createTable.html
@@ -157,7 +157,7 @@
         <header class="header_half">
             <div class="header-inner">
                 <div class="header-top_contacts"><a href="#"><span>Call now:</span> +918888899885</a><a
-                        href="#"><span>Write :</span> nicehomeinfra@gmail.com</a></div>
+                        href="#"><span>Email :</span> nicehomeinfra@gmail.com</a></div>
                 <div class="share-btn show-share isShare"></div>
                 <a href="alltables.html">
                     <div class="header_half-reser_btn " id="get_all_tables"><span style="color: black;">Get All
