--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                             <div class="services-list-item">
                                 <span class="serv-icon"><i class="fa-thin fa-olive-branch"></i></span>
                                 <span class="services_number">03.</span>
-                                <h3>3. Commitment to Sustainability</h3>
+                                <h3>Commitment to Sustainability</h3>
                                 <p>We believe in building responsibly. Our approach emphasizes sustainable materials and eco-friendly practices, ensuring that our constructions contribute positively to the environment and are energy-efficient. </p>
                                 <ul>
                                     <!-- <li>Sed elit quam.</li>
@@ -432,7 +432,7 @@
                                                     <a href="tel:+918888899885">+918888899885</a>
                                                 </li>
                                                 <li>
-                                                    <span>Write :</span>
+                                                    <span>Email :</span>
                                                     <a href="mailto:nicehomeinfra@gmail.com">nicehomeinfra@gmail.com</a>
                                                 </li>
                                                 <li>
