--- a/order.html
+++ b/order.html
@@ -265,7 +265,7 @@
                           <a href="#">+56897456123</a>
                         </li>
                         <li>
-                          <span>Write :</span><a href="#">yourmail@domain.com</a>
+                          <span>Email :</span><a href="#">yourmail@domain.com</a>
                         </li>
                         <li>
                           <span>Find us : </span><a href="#"> 27TH Brooklyn NY</a>
