--- a/product-single.html
+++ b/product-single.html
@@ -454,7 +454,7 @@
                                             <div class="footer-contacts footer-box">
                                                 <ul>
                                                     <li><span>Call :</span><a href="#">+489756412322</a> , <a href="#">+56897456123</a></li>
-                                                    <li><span>Write  :</span><a href="#">yourmail@domain.com</a></li>
+                                                    <li><span>Email  :</span><a href="#">yourmail@domain.com</a></li>
                                                     <li><span>Find us : </span><a href="#">USA 27TH Brooklyn NY</a></li>
                                                 </ul>
                                             </div>
